# GenesisVM

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/global/: flag.cpp
src/kernel/: KernelInitialize.cpp
src/kernel/gc/: GCConfiguration.cpp  GCConfiguration.hpp  constants.hpp
src/kernel/include/: Arena.hpp  Metaspace.hpp  MetaspaceGC.hpp  PeriodicThread.hpp  StillRunningThreadClosure.hpp  VMThread.hpp  kernel_mutex.hpp  safepoint.hpp
src/kernel/memory/: MetaspaceArena.cpp
src/kernel/metaspace/: Arena.cpp  BlockManager.cpp  BlockManager.hpp  BlockTree.hpp  CommittedLimiter.cpp  CommittedMask.cpp  CommittedMask.hpp  ContextHolder.cpp  ContextHolder.hpp  InternalStats.cpp  Metaspace.cpp  MetaspaceGC.cpp  Region.cpp  Region.hpp  Segment.cpp  Segment.hpp  SegmentHeaderPool.cpp  SegmentHeaderPool.hpp  SegmentManager.cpp  SegmentManager.hpp  Volume.cpp  Volume.hpp  VolumeList.cpp  VolumeList.hpp  constants.cpp  meta_log.hpp
src/kernel/thread/: LangThread.cpp  PeriodicTask.cpp  PeriodicThread.cpp  PlatThread.cpp  StillRunningThreadClosure.cpp  VMThread.cpp  VM_Operation.cpp  kernel_mutex.cpp  safepoint.cpp
src/kernel/utils/: BitMap.cpp  Space.cpp  TimeStamp.cpp
src/metaspace/: BlockArray.hpp  BlockManager.cpp  BlockManager.hpp  BlockTree.cpp  BlockTree.hpp  CommittedMask.cpp  CommittedMask.hpp  constants.cpp  constants.hpp
src/plat/: PlatInitialize.cpp  global.cpp
src/plat/include/: ArenaChunkPool.hpp  GlobalLocker.hpp  MemoryTracer.hpp  inner_os.hpp
src/plat/logger/: LogLayout.cpp  LogLayoutFollower.cpp  LogOutput.cpp  LogSingleFileOutput.cpp  LogStream.cpp  LogTagSet.cpp
src/plat/mem/: Arena.cpp  ArenaChunk.cpp  ArenaChunk.hpp  ArenaChunkPool.cpp  (+1 more)
test/: CMakeLists.txt
test/kernel/: test_thread.cpp
(+85 files in other folders)
